# pildora

./: .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  mlc_config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/md-lint/: SKILL.md
.github/skills/pr-ready/: SKILL.md
.github/workflows/: validate.yml
cli/: Cargo.toml  README.md
cli/src/: cli.rs  context.rs  drug_index.rs  export.rs  main.rs  models.rs  schedule_engine.rs  session.rs
cli/src/commands/: completions.rs  dose.rs  export.rs  init.rs  lock.rs  med.rs  mod.rs  recovery.rs  schedule.rs  status.rs  unlock.rs
cli/src/storage/: mod.rs  typed.rs
cli/tests/: drug_index_test.rs  export_test.rs  med_test.rs  schedule_test.rs  storage_test.rs  vault_commands_test.rs
crypto/: Cargo.toml  README.md
crypto/src/: error.rs  key_hierarchy.rs  keys.rs  lib.rs  primitives.rs  vault.rs  wasm.rs
crypto/test-vectors/: README.md  vectors.json
crypto/tests/: test_vectors.rs  wasm_node_test.cjs
data/: README.md  pyproject.toml
data/src/pildora_data/: cli.py  compress.py  download.py  index_builder.py  models.py  output.py  rxnorm.py  search.py
data/src/pildora_data/parsers/: dailymed.py  openfda.py
data/tests/: test_compress.py  test_dailymed.py  test_index_builder.py  test_models.py  test_openfda.py  test_output.py  test_search.py
data/tests/fixtures/: dailymed_sample.json  openfda_sample.json  search_drugs.json  search_supplements.json
docs/: apple-developer-setup.md  decisions.md  roadmap.md
docs/adr/: 001-encryption-architecture.md  002-mvp-platform.md  003-notification-architecture.md  004-data-sync-protocol.md  005-open-source-strategy.md  006-tech-stack-consolidation.md  README.md
ios/: README.md
server/: Cargo.toml  README.md
server/src/: main.rs
web/: README.md
