[package]
name = "pildora-cli"
description = "Command-line medication and supplement tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "pildora"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "color"] }
clap_complete = "4"
colored = "3"
dirs = "6"
pildora-crypto = { path = "../crypto" }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rpassword = "5"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
