[package]
name = "pildora-crypto"
description = "Zero-knowledge encryption library for Pildora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
