[package]
name = "pildora-crypto"
description = "Zero-knowledge encryption library for Pildora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake2 = "0.10"
hkdf = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"
