[package]
name = "pildora-crypto"
description = "Zero-knowledge encryption library for Pildora"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake2 = "0.10"
hex = "0.4"
hkdf = "0.12"
js-sys = { version = "0.3", optional = true }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wasm-bindgen = { version = "0.2", optional = true }
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
hex-literal = "0.4"
wasm-bindgen-test = "0.3"
