[project]
name = "pildora-data"
version = "0.1.0"
description = "Drug data ETL pipeline for Pildora"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "httpx>=0.27",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
pildora-etl = "pildora_data.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
